[workspace.package]
name = "rakoon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace]
members = [
    "bin", 
    "crates/mutator", 
    "crates/common", 
    "crates/app", "crates/random", "crates/legacy", "crates/al", "crates/eip1559", "crates/eip7702", "crates/blob"]
resolver = "3"

[workspace.dependencies]
mutator = { path = "crates/mutator" }
common = { path = "crates/common" }

crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1.44.0", features = ["full"] }
colored = "3.0.0"
alloy = "0.15.0"
rand = "0.9.0"
