[workspace.package]
name = "rakoon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
async_fn_in_trait = "allow"

[workspace]
members = [
    "bin", 
    "crates/mutator", 
    "crates/common", 
    "crates/app", "crates/runners"]
resolver = "3"

[workspace.dependencies]
mutator = { path = "crates/mutator" }
common = { path = "crates/common" }

crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1.44.0", features = ["full"] }
colored = "3.0.0"
alloy = { git = "https://github.com/nethoxa/unsafe-alloy.git", branch = "main" }
rand = "0.9.0"
clap = { version = "4.5.37", features = ["derive"] }
