[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
alloy = { workspace = true }

common = { path = "../common" }