[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
alloy = { workspace = true }

common = { path = "../common" }
eip7702 = { path = "../eip7702" }
random = { path = "../random" }
legacy = { path = "../legacy" }
al = { path = "../al" }
blob = { path = "../blob" }
eip1559 = { path = "../eip1559" }
