[package]
name = "runners"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rand = { workspace = true }
tokio = { workspace = true }
alloy = { workspace = true }
alloy-rlp = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

common = { path = "../common" }
mutator = { path = "../mutator" }